# Practica-redes-neuronales-recurrentes

./: README.md
Codigos/: 01_rnr_retornos_bitcoin.ipynb  02_rnr_comparacion_arquitecturas.ipynb  pyproject.toml  rnr_retornos_bitcoin.ipynb
Codigos/data/: BTC-USD.csv
Codigos/models/: config.pkl  lstm_btc_lb90.keras  scaler.pkl
